# verifiagent

./: .env.example  .gitignore  API.md  Anchor.toml  DEMO_SCRIPT.md  DEPLOY.md  ENGAGEMENT_NEXT_STEPS.md  ENGAGEMENT_STRATEGY.md  FINAL_STATUS.md  FINAL_SUBMISSION_GUIDE.md  PROJECT_INFO.md  PROJECT_STATUS.md  README.md  SOLANA_INTEGRATION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_CONFIRMED.md  TWEET_LIVE_UPDATE.txt  TWEET_NOW.txt  TWITTER_POSTS.md  package.json  test-api.sh
minimal-program/: Cargo.toml
minimal-program/src/: lib.rs
native-program/: Cargo.toml
native-program/src/: lib.rs
programs/verifiagent/: Cargo.toml
programs/verifiagent/src/: lib.rs
public/: index.html
scripts/: engage.sh
src/: index.ts
src/api/: activity.ts  index.ts  verification.ts
src/config/: index.ts
src/services/: activity.ts  solana-live.ts  solana.ts  storage.ts  verification.ts
src/types/: index.ts
src/utils/: crypto.ts
tests/: verifiagent.ts
