[package]
name = "verifiagent"
version = "0.1.0"
description = "Identity + Execution Trace Protocol for AI Agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verifiagent"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
